Add TaskViewPanel to car ui portrait
- Refactors the CarUiPortraitHomeScreen to move the root task view
  logic into its own class TaskViewPanel.
 * The task view panel can now control its own state. This let us have more than one panel at the same time and control the direction easier.
 * Adds a state change listener to the view panel to make it easier to
    control the visual changes needed before and after the animation.
- Creates OnPanelDragListener to contain the drag behavior of the panel.
- Creates GripBarView to encapsulates the logic for grip bar.
- Creates set of animation and animators for the panel.
- Fixes some issues with regards to the animation to make them smoother.
- Cleans up some of the logic around the immersive mode and states.

Test: Manual
Bug: 267194184
Change-Id: Ib9a811756176f558086aab3d3f2333c18e1676d5